--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Wonderful Thoughts</string>
     <string name="fab_text">New thought</string>
+    <string name="title_edit_hint">Note Title</string>
+    <string name="thought_edit_hint">Thought</string>
 </resources>
