Added login/register layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,9 @@
     <string name="welcome">Welcome!</string>
 
     <string name="email">Email</string>
+    <string name="register">Register</string>
+    <string name="login">Login</string>
     <string name="password">Password</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="username">Username</string>
 </resources>
