--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="password">Password</string>
     <string name="forgot_password">Forgot Password?</string>
     <string name="username">Username</string>
+    <string name="sign_in">Sign in</string>
 </resources>
